src/objects/City__c.object
<CustomObject>
    <fields>
        <fullName>Airline__c</fullName>
        <label>Airline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Code__c</fullName>
        <label>City Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>City Legacy ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>City_Name__c</fullName>
        <label>City Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Cities</relationshipLabel>
        <relationshipName>Cities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flight_Number_1__c</fullName>
        <description>Formula Display on Airlines Address</description>
        <label>Flight Number (1)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Number_2__c</fullName>
        <label>Flight Number (2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_By__c</fullName>
        <label>Legacy Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_Date__c</fullName>
        <label>Legacy Updated Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>City</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>City_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>City</fullName>
        <columns>City_Name__c</columns>
        <columns>City_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>City</label>
    </listViews>
    <nameField>
        <label>City Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>